[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/images/endscreen.png" type="Texture" id=1]
[ext_resource path="res://assets/images/numbers.png" type="Texture" id=2]
[ext_resource path="res://End.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 3, 5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 3, 0, 3, 5 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 6, 0, 3, 5 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 9, 0, 3, 5 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 12, 0, 3, 5 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 15, 0, 3, 5 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 18, 0, 3, 5 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 21, 0, 3, 5 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 3, 5 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 27, 0, 3, 5 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="TextureRect"]
texture = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 83, 27 )
frames = SubResource( 11 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 87, 27 )
frames = SubResource( 11 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 91, 27 )
frames = SubResource( 11 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
position = Vector2( 95, 27 )
frames = SubResource( 11 )

[node name="AnimatedSprite5" type="AnimatedSprite" parent="."]
position = Vector2( 101, 27 )
frames = SubResource( 11 )

[node name="AnimatedSprite6" type="AnimatedSprite" parent="."]
position = Vector2( 105, 27 )
frames = SubResource( 11 )
